# PyCIAT

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml  config_template.yaml
data/: README.md
data/templates/: README.md
docs/: README.md  conf.py  index.rst  requirements-docs.txt
docs/_static/css/: custom.css
notebooks/: 01_soil_and_advanced_features.ipynb  README.md  notebook_requirements.txt
scripts/: 00_setup_environment.py  01_prepare_climate_data.py  02_setup_simulations.py  03_run_simulations_parallel.py  04_process_outputs.py  05_analyze_impacts.py  06_analyze_adaptations.py  07_generate_visualizations.py  08_train_surrogate.py  09_predict_surrogate.py  predict_surrogate.py  run_all.py  run_hpc.sh  setup_directories.py  train_surrogate.py
src/: __init__.py  analysis.py  climate_processing.py  config_loader.py  soil_processing.py  utils.py  visualization.py
src/advanced_modules/: __init__.py
src/crop_model_interface/: __init__.py  apsim_interface.py  base_interface.py  dssat_interface.py  status_codes.py  stics_interface.py
src/surrogate_model/: __init__.py  evaluation.py  feature_engineering.py  model_selection.py  predict.py
tests/: conftest.py  test_analysis.py  test_base_interface.py  test_climate_processing.py  test_config_loader.py  test_utils.py  test_visualization.py
